--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <form id='github-form'>
       <input id='search' type='text' name='search'>
-      <input type='submit' name='submit'/>
+      <input id="search-user" type='submit' name='Search by User' value='Search by User'/>
+      <input id="search-repo" type='submit' name='Search By Repo' value='Search by Repo'/>
     </form>
 
     <div id='github-container'>
